--- a/01.md
+++ b/01.md
@@ -1,17 +1,1 @@
-## Sorting Array
-## Sorting Collection
-
-
-## Comparable vs Comparator with Example.
-
-## Immutable Class with Exmaple.
-
-## Functional Interfaces.
-
-## Custom Exception
-
-## Internal Working of HashMap
-
-## Object as a Key in HashMap.
-
-## Bean Scopes
+# In a string, count the repeated characters and show in map using Java 8.
