--- a/01.md
+++ b/01.md
@@ -1,1 +1,17 @@
 # In a string, count the repeated characters and show in map using Java 8.
+- For Example, "india" -> output is "i->2, n->1,d->1,a->1"
+
+```java
+public class CountChars {
+	
+	public static void main(String[] args) {
+		
+		String str = "india";
+		
+		Map<Character, Long> charCounts = str.chars().mapToObj(c -> (char) c).collect(Collectors.groupingBy(Function.identity(),Collectors.counting()));
+		
+		charCounts.forEach((k,v) -> System.out.print(k +" -> "+ v + " "));
+		
+	}
+}
+```
