--- a/01.md
+++ b/01.md
@@ -50,3 +50,14 @@ public class CamelToSnakeCase {
 	}
 }
 ```
+
+## Given a sorted array arr[] of size N, the task is to remove the duplicate elements from the array.
+
+    Examples: 
+
+    Input: arr[] = {2, 2}
+    Output: arr[] = {2,null}
+    Explanation: All the elements are 2, So only keep one instance of 2.
+
+    Input: arr[] = {1, 2, 2, 3, 4, 4 }
+    Output: arr[] = {1, 2, 3, 4,null,null}
