--- a/01.md
+++ b/01.md
@@ -1,5 +1,5 @@
 ## In a string, count the repeated characters and show in map using Java 8.
-- For Example, "india" -> output is "i->2, n->1,d->1,a->1"
+    For Example, "india" -> output is "i->2, n->1,d->1,a->1"
 
 ```java
 public class CountChars {
@@ -17,7 +17,7 @@ public class CountChars {
 ```
 
 ## Write a program to convert camel case string to snake case string.
-- whatIsYourName -> WHAT_IS_YOUR_NAME
+    whatIsYourName -> WHAT_IS_YOUR_NAME
 ```java
 
 public class CamelToSnakeCase {
