--- a/01.md
+++ b/01.md
@@ -61,3 +61,7 @@ public class CamelToSnakeCase {
 
     Input: arr[] = {1, 2, 2, 3, 4, 4 }
     Output: arr[] = {1, 2, 3, 4,null,null}
+
+## Read CSV
+- Using Scanner
+- BufferedReader
