--- a/01.md
+++ b/01.md
@@ -51,6 +51,50 @@ public class CamelToSnakeCase {
 }
 ```
 
+## 
+Table Name : Student
+Column : Name, Subject, Marks 
+Rama Math 50 
+Rama Physics 60 
+Rama English 45 
+Hari Math 70 
+Hari Physics 65 
+Hari English 85 
+Gita Math 90 
+Gita Physics 55 
+Gita English 80 
+Expected Output: Gita 225 Hari 220 Rama 155 
+Print the Students In Notice board format.
+(i.e Calculate the Toal mark for an individual student, and print in descending order of total marks.)
+
+```sql
+-- Create the Student table
+CREATE TABLE Student (
+    Name VARCHAR(50),
+    Subject VARCHAR(50),
+    Marks INT
+);
+
+-- Insert data into the Student table
+INSERT INTO Student (Name, Subject, Marks) VALUES
+    ('Rama', 'Math', 50),
+    ('Rama', 'Physics', 60),
+    ('Rama', 'English', 45),
+    ('Hari', 'Math', 70),
+    ('Hari', 'Physics', 65),
+    ('Hari', 'English', 85),
+    ('Gita', 'Math', 90),
+    ('Gita', 'Physics', 55),
+    ('Gita', 'English', 80);
+
+-- Calculate total marks for each student and sort them in descending order
+SELECT Name, SUM(Marks) AS TotalMarks
+FROM Student
+GROUP BY Name
+ORDER BY TotalMarks DESC;
+```
+
+
 ## Given a sorted array arr[] of size N, the task is to remove the duplicate elements from the array.
 
     Examples: 
@@ -62,6 +106,9 @@ public class CamelToSnakeCase {
     Input: arr[] = {1, 2, 2, 3, 4, 4 }
     Output: arr[] = {1, 2, 3, 4,null,null}
 
+	
 ## Read CSV
 - Using Scanner
 - BufferedReader
+
+
