--- a/01.md
+++ b/01.md
@@ -106,9 +106,81 @@ ORDER BY TotalMarks DESC;
     Input: arr[] = {1, 2, 2, 3, 4, 4 }
     Output: arr[] = {1, 2, 3, 4,null,null}
 
-	
+
 ## Read CSV
 - Using Scanner
 - BufferedReader
 
 
+## LinkedHashMap working principle
+
+## Write a Java program to print a sequence of numbers up to N using 3 threads.
+	For example, if
+	we want to print a sequence of numbers up to 10 then it’ll look like this: THREAD-1 : 1 THREAD-
+	2 : 2 THREAD-3 : 3 THREAD-1 : 4 THREAD-2 : 5 THREAD-3 : 6 THREAD-1 : 7 THREAD-2 : 8
+	THREAD-3 : 9 THREAD-1 : 10 using countdownlatch
+
+## Output of a program student class saved in hashmap and equals , hashcode methods overriden.
+
+## What are SOLID principles.
+
+## Sql query to retrieve sum of salary per employee
+```sql
+SELECT employee_id, SUM(salary) AS total_salary
+FROM employees
+GROUP BY employee_id;
+```
+
+## Unix Commands
+- How to search all the zip files containing the given word, give me latest 3 such files.
+- Give me the command to find a specific file under a folder and its subfolders.
+
+##
+```
+We have a csv file student_id, student_name, student_dob 1, Bob, 2020-01-05 2, Alice, 2020-01-
+31 Parse this file store in memory (any data structure you want) As you cover various scenarios
+below, ask candidate to suggest the collection / data structure. Do not prompt them or give
+choices.
+[NOTAPPLICABLE] Reject the records in cases like ID is null, Name is null, DOB is null. These are
+DQ checks.
+```
+
+##
+```
+Consider the following program to insert values into HashSet. 
+
+class Student 
+{ 	public int id; 
+	public String name; 
+	public Student(String name, int id){
+		 this.name = name; this.id = id; 
+	}
+	public int hashCode() {
+		 return this.id; 
+	}
+	
+	public String toString() { 
+		return "Student: " + this.name +"@" + Integer.toHexString(hashCode()); 
+	} 
+	
+	public boolean equals(Object o) {
+		 if (o instanceof Student) { Student s = (Student) o; return s.id == this.id ? true : false; } return false;
+	}
+ } 
+		 
+public class UpdateHashSet { 
+	public static void main(String[] args) { 
+HashSet<Student> studentList = new HashSet<>();
+Student st1 = new Student("Nimit", 1);
+Student st2 = new Student("Rahul", 3);
+Student st3 = new Student("Nimit", 2); 
+studentList.add(st1);
+studentList.add(st2);
+studentList.add(st3); 
+System.out.println(studentList.size());
+st1.id = 3;
+System.out.println(studentList.size()); 
+}
+}
+What will be the output?
+```
