--- a/01.md
+++ b/01.md
@@ -183,3 +183,23 @@ System.out.println(studentList.size());
 }
 What will be the output?
 ```
+
+## equals()
+- it checks the equality of two objects.
+- it compares the key, whether they are equal or not.
+- it is a method of the Object Class. It can be Overridden.
+- If you Override the equals() , then it is mandatory to override the hashCode().
+
+## hashcode()
+- This is the method of Object Class.
+- It returns the hashcode value of the object in integer form.
+- The value received from the method is used as bucket number(index).
+- The bucket number (index) is the address of the element inside the map.
+- HashCode of null Key is 0.
+
+```
+obj1.equals(obj2) is true
+then 
+obj1.hashCode() == obj2.hashCode() must be true.
+if not they can be behave very weirdly.
+```
