--- a/01.md
+++ b/01.md
@@ -203,3 +203,8 @@ then
 obj1.hashCode() == obj2.hashCode() must be true.
 if not they can be behave very weirdly.
 ```
+
+## What is the contract between equals() and hashCode().
+- if two objects are equal according to the equal() then the hashcode for both the objects must be same.
+- it is not necessary that if we have same hashcode for two objects which means those two objects are equal.(This is collision. Better hash function can prevent this.)
+- when ever it is invoked on the same object more than once during an execution of java application,the hashcode method must consistently return the same integer.
