--- a/01.md
+++ b/01.md
@@ -220,3 +220,6 @@ if not they can be behave very weirdly.
 6. **After getting the index** , it checks all key present in the linked list at that index using **equals()** if the key is already present in the linked list it **replaces the old value with new value**.
 7. if the key is not present in the linked list it appends the specified key value pair at the end of the linked list
 8. when the calculated index value is same for two or more keys the collision is resolved by linked list the entry class has an attribute next this attribute always points to the next object in the chain.
+
+
+## Internal Working of HashSet.
