--- a/01.md
+++ b/01.md
@@ -223,3 +223,20 @@ if not they can be behave very weirdly.
 
 
 ## Internal Working of HashSet.
+
+## Why String is immutable.
+- Security : strings are used in java for classloders and immutability provides security that coreect class is being loaded by the classloader.
+- Performance : String pool is possible only because string is immutable in java. this way java runtime saves a lot of heap memory because different string variables can refers to the same String variables.
+- MultiThreading : it is always safe for multithreading .this avoid the use of synchronization for thread safety.
+- Keys : 
+
+## How To Create immutable class.
+	Student{
+		id,name,List<String> hobbies;
+	}
+	Employee{
+		id,name,Addresss address;
+	}
+	Address{
+		city
+	}
