--- a/02.md
+++ b/02.md
@@ -6,3 +6,38 @@ https://www.youtube.com/watch?v=aaokKp87Hoc&list=PLyHJZXNdCXsdeusn4OM33415DCMQ6s
     If the element is present in the Set already, then this Set.add returns false. we can collect them.
     Set.add returns false if the element was already present in the set. filter such element and Collect duplicate elements in the set
 - stream .filter(n -> litems.add(n)) .collect(Collectors.toSet);
+
+###
+```
+How to find duplicate elements in a Stream in
+Java
+*
+Using Collectors.groupingBy0:
+The groupingBy method of Collectors class in Java groups the objects by some property. So we will pass the property of redundancy and collect the result in a Set.
+For each element in the stream, group them along with their frequency in a map, using Collectors.groupingBy method. Then for each element in the collected map, if the frequency of any element is more than one, then this element is a duplicate element.
+stream .collect(Collectors.groupingBy Function.identity, Collectors.counting))
+// Convert this map into a stream
+entrySet).stream
+// Check if frequency > 1// for duplicate elements // Find such elements
+filterm > m.get Value > 1).map(Map.Entry::getKey)
+// And Collect them in a Set
+•collectCollectors.toSet()):
+Won...
+```
+###
+```
+How to find duplicate elements in a Stream in
+Java
+Collections. frequency(list, i)
+count the frequency of each element, using Collections. frequency method. Then for each element in the collection list, if the frequency of any element is more than one, then this element is a duplicate element.
+stream).filteri - Collections. frequency(list, i) > 1)
+collect(Collectors.toSet);
+13:38 / 16:08
+ype here to search
+Dem...
+*ne...
+2 Won..
+java....
+Post.
+```
+###
