--- a/03.md
+++ b/03.md
@@ -4,3 +4,5 @@
 - Using newInstance() method of the Class class
 - Using newInstance() method of the Constructor class
 - Using Deserialization
+
+## What happens if we do not override equals() and hashcode() in Hashmap
