--- a/03.md
+++ b/03.md
@@ -8,8 +8,10 @@
 ## What happens if we do not override equals() and hashcode() in Hashmap
 
 ```
-[4:09 pm, 13/03/2024] Wissen-mumbai: Program 1:
-Find the first non repetitive character in a string
+Wissen-mumbai: Program 1:
+
+- Find the first non repetitive character in a string
+
 Program 2:
 Print a list of integers without using any loop, foreach method or streamAPI.
 [4:09 pm, 13/03/2024] Wissen-mumbai: Program 3: 
