--- a/06.md
+++ b/06.md
@@ -12,3 +12,6 @@ https://javatechonline.com/spring-batch-tutorial/
 ## @Configuration
 ## @Primary | @Qualifier
 https://www.youtube.com/watch?v=aD65uunMdrI
+
+# Managerial & HR Discussion
+https://www.youtube.com/watch?v=u4VMZ9kXGCA&list=RDCMUCORuRdpN2QTCKnsuEaeK-kQ&index=4
