--- a/01.md
+++ b/01.md
@@ -11,6 +11,12 @@
 #
 
 ## equals() and hashCode()
+### equals()
+- It checks the equality of two objects.
+- It Comapres the Key,whether they are equal or not.
+- it is a method of the Obbject Class. It Can Be Overridden.
+- If You Override the equals() , Then It is mandatory to override the hashCode().
+## What happens if we do not override equals() and hashcode() in Hashmap
 ## 
 ## Internal Working of HashMap
 ## How To Create Immutable Class
