--- a/01.md
+++ b/01.md
@@ -9,6 +9,12 @@
 #
 #
 #
+## Various ways to create object ?
+- Using new Keyword
+- Using clone() method
+- Using newInstance() method of the Class class
+- Using newInstance() method of the Constructor class
+- Using Deserialization
 
 ## equals() and hashCode()
 ### equals()
