--- a/04.md
+++ b/04.md
@@ -1,12 +1,3 @@
-## Various ways to create object ?
-- Using new Keyword
-- Using clone() method
-- Using newInstance() method of the Class class
-- Using newInstance() method of the Constructor class
-- Using Deserialization
-
-
-
 ```
 Wissen-mumbai: Program 1:
 
@@ -14,6 +5,26 @@ Wissen-mumbai: Program 1:
 
 Program 2:
 Print a list of integers without using any loop, foreach method or streamAPI.
+------------
+import java.util.Arrays;
+import java.util.List;
+
+public class Main {
+    public static void main(String[] args) {
+        List<Integer> integers = Arrays.asList(1, 2, 3, 4, 5);
+        printList(integers, 0);
+    }
+
+    public static void printList(List<Integer> list, int index) {
+        if (index < list.size()) {
+            System.out.println(list.get(index));
+            printList(list, index + 1);
+        }
+    }
+}
+
+------------
+
 [4:09 pm, 13/03/2024] Wissen-mumbai: Program 3: 
 Given fews places like mumbai pune bangalore Mysore chennai
 There are routes from 
@@ -25,6 +36,8 @@ I want to know whether i can go from 1 place to another with the help of these r
 
 
 This is basically the Breadth firdt search algorithm in graphs or tress
+
+
 [4:09 pm, 13/03/2024] Wissen-mumbai: Theoretical:
 
 1. Basics of Hashmap. How hashmap will work for below scenario:
@@ -34,6 +47,13 @@ hashmap.get(new Employee(1,”sumant”), 200);
 
 For same question, 2 scenarios 
 1. What if equals method is overridden and hashcode is not
+
+- So again Duplicate keys are allowed.
+Reason -> If Only equals() is overriden , then when you call map.put(firstKey,someValue) firstKey will hash to some bucket and 
+when you call ma.put(secondKey,someValue) it will hash to some other bucket.(as they have a different hashCode)
+So , althouugh they are equal . as they dont hash to the same bucket
+the map cant realize it 
+
 2. ⁠and vice versa
 
 Tip: very core and basic understanding of collections is expected
