--- a/01.md
+++ b/01.md
@@ -1,3 +1,41 @@
+How Custom Java Object will be used as key in HashMap. 
+https://www.youtube.com/watch?v=626jyt0yN4M
+
+How to Iterate Map in Java Example
+5 Best Ways to Iterate Over HashMap in Java
+    1. Iterate through a HashMap EntrySet using Iterator
+    2. Iterate through HashMap KeySet using Iterator
+    3. Iterate HashMap using For-Each Loop
+    4. Iterating through a HashMap using Lambda Expressions
+    5. Loop through a HashMap using Stream Api
+
+
+Internal Working of HashMap
+
+How to make read only ArrayList in java.
+Use Collections.unmodifiableList() method.
+
+                
+                public class ReadOnlyArrayList{
+
+                    public static void main(String[] args){
+                        List list = new ArrayList<>();
+
+                            list.add("Apple");
+                            list.add("Banana");
+                            list.add("Mango");
+
+                        List readOnlyList = Collections.unmodifiableList(list);
+
+                        readOnlyList.add("Kiwi");//UnsupportedOperationException
+
+
+                    }
+
+                }				
+
+-Which collections you used in your project?
+-Explain ConcurrentHashMap class.
 #
 ###
 #
@@ -26,3 +64,19 @@
 ## 
 ## Internal Working of HashMap
 ## How To Create Immutable Class
+
+### macOS command
+cd $HOME  -> Executing cd $HOME would change the current directory to your home directory.
+
+
+## What is the command for running the jar file?
+    java -jar yourfile.jar
+
+
+## What is the command to build the project using Maven?
+    
+    mvn package
+    mvn clean package
+
+    This command will compile the source code, run tests, and package the project into the specified format (usually a JAR file).
+
