--- a/01.md
+++ b/01.md
@@ -1,3 +1,45 @@
+# How To create Immutable Class
+- Make fields private and final:
+- Do not provide setter methods: 
+- Ensure methods do not modify state:
+- Make the class final or use defensive copying:
+
+```java
+//Make the class final
+final class Student{
+
+    // Make fields private and final:
+    final private int id;
+    final private String name;
+    final private List<String> hobbies;
+
+    // provide Getter methods
+
+    public getHobbies(){
+
+    }
+
+    // provide Setter methods
+
+    //parametersed Constructor
+    public Student(int id,String name,List<String> hobbies){
+        this.id = id;
+        this.name = name;
+        this.hobbies = hobbies;
+    }
+
+    // toString 
+
+}
+```
+
+
+
+
+
+
+
+
 How Custom Java Object will be used as key in HashMap. 
 https://www.youtube.com/watch?v=626jyt0yN4M
 
