--- a/01.md
+++ b/01.md
@@ -1,10 +1,13 @@
 Core Java | Design Patterns
-Exception Handling | CollectionFramework
+Exception Handling | CollectionFramework |Multithreading
 Jdbc | Hibernate
 Spring | SpringMVC | SpringBoot
 
 
-
+```
+How to create immutable class
+https://www.youtube.com/watch?v=TXV0_JhP8pY
+```
 # How To create Immutable Class
 - Make fields private and final:
 - Do not provide setter methods: 
