--- a/01.md
+++ b/01.md
@@ -8,7 +8,11 @@ Spring | SpringMVC | SpringBoot
 How to create immutable class
 https://www.youtube.com/watch?v=TXV0_JhP8pY
 ```
-# How To create Immutable Class
+# What is immutable object ?
+- Once we Created an object, we can not change the values of its instance variables.
+- No inheritance.
+
+## How To create Immutable Class
 - Make fields private and final:
 - Do not provide setter methods: 
 - Ensure methods do not modify state:
