--- a/01.md
+++ b/01.md
@@ -12,6 +12,23 @@ https://www.youtube.com/watch?v=TXV0_JhP8pY
 - Once we Created an object, we can not change the values of its instance variables.
 - No inheritance.
 
+## How to Change values of instance variable ?
+```java
+List<String> hobbyList = new ArrayList<>();
+hobbyList.add("Swimming");
+
+// Here We Have Created new Object
+Student s = new Student(1,"Swapnil",hobbyList);
+
+// 1. Using objects passed in constructor
+hobbyList.add("Cricket");
+// 2. Using Setter methods
+s.setName("Rahul");
+// 3. Using getter methods
+List<String> list = s.getHobbies();
+list.add("new Hobby");
+```
+
 ## How To create Immutable Class
 - Make fields private and final:
 - Do not provide setter methods: 
