--- a/01.md
+++ b/01.md
@@ -7,8 +7,9 @@ Spring | SpringMVC | SpringBoot
 ```
 How to create immutable class
 https://www.youtube.com/watch?v=TXV0_JhP8pY
+
 ```
-# What is immutable object ?
+# What is Immutable object ?
 - Once we Created an object, we can not change the values of its instance variables.
 - No inheritance.
 
@@ -50,7 +51,7 @@ final class Student{
 
     }
 
-    // provide Setter methods
+    // remove Setter methods
 
     //parametersed Constructor
     public Student(int id,String name,List<String> hobbies){
