--- a/01.md
+++ b/01.md
@@ -1,6 +1,6 @@
 ```
 Core Java | Design Patterns
-Exception Handling | CollectionFramework |Multithreading
+Exception Handling | CollectionFramework | Multithreading
 Jdbc | Hibernate
 Spring | SpringMVC | SpringBoot
 ```
@@ -8,6 +8,12 @@ Spring | SpringMVC | SpringBoot
 ```
 How to create immutable class
 https://www.youtube.com/watch?v=TXV0_JhP8pY
+
+```
+
+```
+- What is Immutable object.
+- How To create Immutable Class.
 
 ```
 # What is Immutable object ?
