--- a/01.md
+++ b/01.md
@@ -20,7 +20,7 @@ https://www.youtube.com/watch?v=TXV0_JhP8pY
 - Once we Created an object, we can not change the values of its instance variables.
 - No inheritance.
 
-## How to Change values of instance variable ?
+### How to Change values of instance variable ?
 ```java
 List<String> hobbyList = new ArrayList<>();
 hobbyList.add("Swimming");
