--- a/01.md
+++ b/01.md
@@ -45,30 +45,53 @@ list.add("new Hobby");
 
 ```java
 //Make the class final
-final class Student{
-
-    // Make fields private and final:
-    final private int id;
-    final private String name;
-    final private List<String> hobbies;
-
-    // provide Getter methods
-
-    public getHobbies(){
-
-    }
-
-    // remove Setter methods
-
-    //parametersed Constructor
-    public Student(int id,String name,List<String> hobbies){
-        this.id = id;
-        this.name = name;
-        this.hobbies = hobbies;
-    }
-
-    // toString 
-
+final class Student {
+	
+	// Make fields private and final:
+	final private int id;
+	final private String name;
+	final private List<String> hobbies;
+	
+	public int getId() {
+		return id;
+	}
+	public String getName() {
+		return name;
+	}
+	
+	public List<String> getHobbies() {
+		List<String> newList = new ArrayList<String>();
+		for(String h:hobbies) {
+			newList.add(h);
+		}
+		return newList;
+	}
+	
+	// remove Setter Methods
+	
+	public Student(int id, String name, List<String> hobby) {
+		super();
+		this.id = id;
+		this.name = name;
+		// Fixing Constructor Problem
+		this.hobbies = new ArrayList<String>();
+		for(String h:hobby) {
+			hobbies.add(h);	
+		}	
+	}
+}
+```
+```java
+public class StudentTest {
+	
+	public static void main(String[] args) {
+		
+		List<String> list = new ArrayList<String>();
+		
+		list.add("Swimming");
+		
+		Student s = new Student(1, "Swapnil",list );	
+	}
 }
 ```
 
