--- a/01.md
+++ b/01.md
@@ -3,6 +3,7 @@ Core Java | Design Patterns
 Exception Handling | CollectionFramework | Multithreading
 Jdbc | Hibernate
 Spring | SpringMVC | SpringBoot
+ArrayProgram | StringProgram | Java8 Program
 ```
 
 ```
@@ -16,6 +17,12 @@ https://www.youtube.com/watch?v=TXV0_JhP8pY
 - How To create Immutable Class.
 
 ```
+```
+ArrayProgram
+StringProgram
+Java8 Program
+```
+
 # What is Immutable object ?
 - Once we Created an object, we can not change the values of its instance variables.
 - No inheritance.
