--- a/01.md
+++ b/01.md
@@ -18,9 +18,19 @@ https://www.youtube.com/watch?v=TXV0_JhP8pY
 
 ```
 ```
-ArrayProgram
-StringProgram
-Java8 Program
+# ArrayProgram
+
+# StringProgram
+
+- Java program to check whether a string is a Palindrome.
+- Compress a string aaabbbcc into a3b3c2 in java.
+- Write Java Program -input "a2b3c1" and Output should be "aabbbc"
+- In a string, count the repeated characters and show in map using Java 8.
+- Write a program to convert camel case string to snake case string.
+- Java Program To Find First Non Repeated Character In String
+
+
+# Java8 Program
 ```
 
 # What is Immutable object ?
