--- a/01.md
+++ b/01.md
@@ -31,6 +31,7 @@ https://www.youtube.com/watch?v=TXV0_JhP8pY
 
 
 # Java8 Program
+- Write a java program to find the average salary of each department using java 8 Stream API?
 ```
 
 # What is Immutable object ?
@@ -205,3 +206,26 @@ cd $HOME  -> Executing cd $HOME would change the current directory to your home 
 
     This command will compile the source code, run tests, and package the project into the specified format (usually a JAR file).
 
+# Write a java program to find the average salary of each department using java 8 Stream API?
+```java
+public class AverageSalaryByDepartment {
+    public static void main(String[] args) {
+        List<Employee> employees = Arrays.asList(
+                new Employee("John", "HR", 50000),
+                new Employee("Jane", "IT", 60000),
+                new Employee("Doe", "IT", 70000),
+                new Employee("Smith", "HR", 55000),
+                new Employee("Alice", "Finance", 75000),
+                new Employee("Bob", "Finance", 80000)
+        );
+
+        Map<String, Double> averageSalaryByDepartment = employees.stream()
+                .collect(Collectors.groupingBy(Employee::getDepartment,
+                        Collectors.averagingDouble(Employee::getSalary)));
+
+        System.out.println("Average Salary by Department:");
+        averageSalaryByDepartment.forEach((department, averageSalary) ->
+                System.out.println(department + ": " + averageSalary));
+    }
+}
+```
