--- a/01.md
+++ b/01.md
@@ -229,3 +229,38 @@ public class AverageSalaryByDepartment {
     }
 }
 ```
+# sort an employee list using the Stream API in Java
+```java
+public class Main {
+    public static void main(String[] args) {
+        List<Employee> employees = new ArrayList<>();
+        employees.add(new Employee("John", 30, 50000));
+        employees.add(new Employee("Alice", 25, 60000));
+        employees.add(new Employee("Bob", 35, 45000));
+
+        // Sorting employees by name
+        List<Employee> sortedByName = employees.stream()
+                .sorted(Comparator.comparing(Employee::getName))
+                .toList();
+
+        System.out.println("Employees sorted by name:");
+        sortedByName.forEach(System.out::println);
+
+        // Sorting employees by age
+        List<Employee> sortedByAge = employees.stream()
+                .sorted(Comparator.comparingInt(Employee::getAge))
+                .toList();
+
+        System.out.println("\nEmployees sorted by age:");
+        sortedByAge.forEach(System.out::println);
+
+        // Sorting employees by salary
+        List<Employee> sortedBySalary = employees.stream()
+                .sorted(Comparator.comparingDouble(Employee::getSalary))
+                .toList();
+
+        System.out.println("\nEmployees sorted by salary:");
+        sortedBySalary.forEach(System.out::println);
+    }
+}
+```
