--- a/01.md
+++ b/01.md
@@ -32,6 +32,7 @@ https://www.youtube.com/watch?v=TXV0_JhP8pY
 
 # Java8 Program
 - Write a java program to find the average salary of each department using java 8 Stream API?
+- sort an employee list using the Stream API in Java
 ```
 
 # What is Immutable object ?
