--- a/01.md
+++ b/01.md
@@ -19,6 +19,9 @@ https://www.youtube.com/watch?v=TXV0_JhP8pY
 
 ```
 ```
+# Basic Program
+- Program to Check Whether A Number is Prime or Not in Java.
+
 # ArrayProgram
 
 # StringProgram
