--- a/01.md
+++ b/01.md
@@ -211,7 +211,7 @@ cd $HOME  -> Executing cd $HOME would change the current directory to your home 
 
     This command will compile the source code, run tests, and package the project into the specified format (usually a JAR file).
 
-# Write a java program to find the average salary of each department using java 8 Stream API?
+## Write a java program to find the average salary of each department using java 8 Stream API?
 ```java
 public class AverageSalaryByDepartment {
     public static void main(String[] args) {
@@ -234,7 +234,7 @@ public class AverageSalaryByDepartment {
     }
 }
 ```
-# sort an employee list using the Stream API in Java
+## sort an employee list using the Stream API in Java
 ```java
 public class Main {
     public static void main(String[] args) {
@@ -269,3 +269,8 @@ public class Main {
     }
 }
 ```
+
+## Program to Check Whether A Number is Prime or Not in Java.
+	Prime number is a number that is greater than 1 and divided by 1 or itself only.
+	prime numbers can't be divided by other numbers than itself or 1. For example 2, 3, 5, 7, 11, 13, 17.... are the prime numbers.
+	Note: 0 and 1 are not prime numbers. The 2 is the only even prime number because all the other even numbers can be divided by 2.
