--- a/01.md
+++ b/01.md
@@ -274,3 +274,34 @@ public class Main {
 	Prime number is a number that is greater than 1 and divided by 1 or itself only.
 	prime numbers can't be divided by other numbers than itself or 1. For example 2, 3, 5, 7, 11, 13, 17.... are the prime numbers.
 	Note: 0 and 1 are not prime numbers. The 2 is the only even prime number because all the other even numbers can be divided by 2.
+
+```java
+public class PrimeNumber {
+	
+	public static void main(String[] args) {
+			
+		int num = 3;
+		
+		boolean result = isPrime(num);
+		
+		if(result) {
+			System.out.println("Prime Number "+ num);
+		}else {
+			System.out.println("Not a Prime Number");
+		}
+	}
+
+	private static boolean isPrime(int num) {
+		
+		boolean result = true;
+		
+		for(int i =2;i<=num-1;i++	) {
+		
+			if(num % i == 0) {
+				result = false;
+			}
+		}
+		return result;
+	}
+}
+```
