--- a/01.md
+++ b/01.md
@@ -294,6 +294,10 @@ public class PrimeNumber {
 	private static boolean isPrime(int num) {
 		
 		boolean result = true;
+
+		if (num <= 1) { 
+			return false;
+		}
 		
 		for(int i =2;i<=num-1;i++	) {
 		
