--- a/01.md
+++ b/01.md
@@ -37,6 +37,9 @@ https://www.youtube.com/watch?v=TXV0_JhP8pY
 # Java8 Program
 - Write a java program to find the average salary of each department using java 8 Stream API?
 - sort an employee list using the Stream API in Java
+- find out all the numbers starting with 1 in a list by using Stream API ?
+- Write a java program to find sum of even numbers and sum of odd numbers in a given list using java 8 streams.
+- How to convert primitive data type arrays to Wrapper arrays in Java.
 ```
 
 # What is Immutable object ?
@@ -306,6 +309,68 @@ public class PrimeNumber {
 			}
 		}
 		return result;
+	}
+}
+```
+
+## find out all the numbers starting with 1 in a list by using Stream API ?
+```java
+    List<Integer> list = Arrays.asList(20,15,80,11,48,25,98,32,17);
+
+    list.stream().map(s -> s.toString()).filter(s -> s.startsWith("1")).forEach(System.out::println);
+```
+
+
+## Write a java program to find sum of even numbers and sum of odd numbers in a given list using java 8 streams.
+    List<Integer> list = Arrays.asList(3,5,6,8,9);
+
+```java
+public class SumOfEvenOdd {
+	
+	public static void main(String[] args) {
+		List<Integer> list = Arrays.asList(3,5,6,8,9);
+		
+		//filter even numbers and add to list
+		List<Integer> listOfEvenNum = list.stream().filter(n -> n % 2 ==0 ).collect(Collectors.toList());
+		System.out.println(listOfEvenNum);
+		
+		int sumOfEvenNumbers = list.stream().filter(n->n%2==0).mapToInt(Integer::intValue).sum();
+
+		System.out.println(sumOfEvenNumbers);
+		
+		//filter Odd numbers and add to list
+		List<Integer> listOfOddNum = list.stream().filter(n->n%2 == 1).collect(Collectors.toList());
+		
+		System.out.println(listOfOddNum);
+		
+		int sumOfOddNumbers = list.stream().filter(n->n%2==1).mapToInt(Integer::intValue).sum();
+	
+		System.out.println(sumOfOddNumbers);
+	}
+}
+```
+
+## How to convert primitive data type arrays to Wrapper arrays in Java.
+
+```java
+public class PrimitiveArrayToStream {
+	
+	public static void main(String[] args) {
+		
+		//primitive data type array
+		int[] arr = {10,20,30,40,60,30,40,50,60,};
+		
+		IntStream stream = Arrays.stream(arr);
+		
+		Stream<Integer> boxed = stream.boxed();
+		
+		//convert to Wrapper Array
+		
+		Integer[] array = boxed.toArray(Integer[]::new);
+		
+		System.out.println(Arrays.toString(arr));
+		
+		//Integer[] array2 = Arrays.stream(arr).boxed().toArray(Integer[] :: new);	
 	}
 }
 ```
